--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <link rel="stylesheet" href="/style.css" />
+      <link rel="stylesheet" href="style.css" />
     
   </head>
 
@@ -32,7 +33,7 @@
           <button type="submit">Watch Live</button>
         </div>
         <div class="row2">
-          <img src="/images/Banner Image.png" alt="something errorsomething error" />
+          <img src="images/Banner Image.png" alt="something errorsomething error" />
         </div>
       </div>
 
